<resources>
    <string name="app_name">Github Favorite</string>
    <string name="setting">Setting</string>
    <string name="search">Search</string>
    <string name="username">Username</string>
    <string name="following">Following</string>
    <string name="follower">Follower</string>
    <string name="repository">Repository</string>
    <string name="name">Full Name</string>
    <string name="search_hint">Search User Name</string>
    <string name="follower_count">1</string>
    <string name="following_count">12</string>
    <string name="repository_count">13</string>
    <string name="theme">Theme</string>
    <string name="favorite">Favorite</string>
    <string name="floating_action_button">Floating Action Button</string>
</resources>